title page: show all meta fiedls and no more small caps
lmodern doesn't contain any small-caps fonts so latex will complain
and not render them anyways

--- a/content/general/titelseite.tex
+++ b/content/general/titelseite.tex
@@ -7,10 +7,10 @@
 \begin{center}
 
 % Text
-\huge{\textsc{\textbf{\titel}}}\\
+\huge{\textbf{\titel}}\\
 \Large{\textbf{\untertitel}}\\[4ex]
 
-%\LARGE{\textbf{\arbeit}}\\[4ex]
+\LARGE{\textbf{\arbeit}}\\[4ex]
 
 \normalsize{Für die Prüfung zum\\
 \pruefung}\\[4ex]
@@ -27,8 +27,8 @@ Von\\
 Abgabedatum:				   	& \quad \abgabe\\
 %Matrikelnummer: 			    & \quad \matrikelnr\\ 
 Kurs:                           & \quad \kurs\\ 
-%Ausbildungsfirma:	 			& \quad \firma\\ 
-%Betreuer der Ausbildungsfirma:  & \quad \betreuerfirma
+Ausbildungsfirma:	 			& \quad \firma\\
+Betreuer der Ausbildungsfirma:  & \quad \betreuerfirma
 \end{tabular}
     
 \end{center}
