--- a/main.tex
+++ b/main.tex
@@ -28,10 +28,10 @@
 \newcommand{\autor}{Jonas Kümmerlin}
 \newcommand{\matrikelnr}{}
 \newcommand{\kurs}{TINF15B4}
-\newcommand{\firma}{}
-\newcommand{\abgabe}{XXXX}
-\newcommand{\betreuerdhbw}{}
-\newcommand{\betreuerfirma}{}
+\newcommand{\firma}{UNTERNEHMEN}
+\newcommand{\abgabe}{ABGABETERMIN}
+\newcommand{\betreuerdhbw}{BETREUER-DHBW}
+\newcommand{\betreuerfirma}{BETREUER-FIRMA}
 \newcommand{\jahr}{2017}
 \newcommand{\code}[1]{\texttt{#1}}
 \newcommand{\source}[1]{\footnotesize Quelle: \url{#1}}
