Add scrhack to get rid of float@addToList warnings

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,a4paper,oneside,titlepage,listof=totoc,bibliography=totoc]{scrreprt}
+\usepackage{scrhack}
 \usepackage[utf8]{inputenc}
 \usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm,includehead,includefoot,headsep=1cm]{geometry}
 \usepackage[ngerman]{babel}
