--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,24 @@
 \documentclass[12pt,a4paper,oneside,titlepage,listof=totoc,bibliography=totoc]{scrreprt}
 \usepackage{scrhack}
 \usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm,includehead,includefoot,headsep=1cm]{geometry}
-\usepackage[ngerman]{babel}
 \usepackage{iftex}
 \ifPDFTeX
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
+    \usepackage{lmodern}
+    \usepackage[ngerman]{babel}
 \fi
-\usepackage{lmodern}
 \ifLuaTeX
     \usepackage{fontspec}
+    \setmainfont{CMU Serif}
+    \usepackage{polyglossia}
+    \setdefaultlanguage[spelling=new,babelshorthands=true]{german}
 \fi
 \ifXeTeX
     \usepackage{fontspec}
+    \setmainfont{CMU Serif}
+    \usepackage{polyglossia}
+    \setdefaultlanguage[spelling=new,babelshorthands=true]{german}
 \fi
 \usepackage{graphicx}
 \usepackage{hyperref}
@@ -44,7 +50,7 @@
 \newcommand{\jahr}{2017}
 \newcommand{\code}[1]{\texttt{#1}}
 \newcommand{\source}[1]{\footnotesize Quelle: \url{#1}}
-\newcommand{\zitat}[1]{\glqq{}#1\grqq{}}
+\newcommand{\zitat}[1]{"`#1"'}
 
 % Logos
 \newcommand{\logodhbw}{\includegraphics[width=6cm]{img/logos/dhbw}}
