--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,10 @@
 \usepackage[toc, nogroupskip, nonumberlist, nopostdot]{glossaries}
 \usepackage{array}
 
+% Für Beispieltext
+\usepackage{lipsum}
+\usepackage{metalogo}
+
 % Infos
 \newcommand{\titel}{TITEL}
 \newcommand{\untertitel}{UNTERTITEL}
@@ -103,6 +107,7 @@
 
 % include chapters here!
 \include{content/Einleitung}
+\include{content/Features}
 
 \begin{appendix}
 
