--- a/references/bibliothek.bib
+++ b/references/bibliothek.bib
@@ -1,21 +1,23 @@
-@misc{bib:assembler,
-	author = {{Wikipedia}},
-	title = {{Assemblersprache}},
-	howpublished = {\url{https://de.wikipedia.org/wiki/Assemblersprache}},
-	note = {Datum: 20.06.2017}
+@misc{latexrun,
+    author = {Austin Clements},
+    year = {2017},
+    howpublished = {\url{https://github.com/aclements/latexrun}},
+    note = {Abruf: 4.10.2017}
 }
 
-
-@misc{bib:8051,
-	author = {{Tutorialspoint}},
-	title = {{Embedded Systems - 8051 Microcontroller}},
-	howpublished = {\url{https://www.tutorialspoint.com/embedded_systems/es_microcontroller.htm}},
-	note = {Datum: 20.06.2017}
+@misc{inkscape,
+    author = {The Inkscape Developers},
+    howpublished = {\url{https://inkscape.org}},
+    note = {Abruf: 4.10.2017},
+    year = 2017
 }
 
-@misc{bib:8051_2,
-	author = {{Mikrocontroller.net}},
-	title = {{8051}},
-	howpublished = {\url{https://www.mikrocontroller.net/articles/8051}},
-	note = {Datum: 20.06.2017}
+@article{gansner2000open,
+  title={An open graph visualization system and its applications to software engineering},
+  author={Gansner, Emden R and North, Stephen C},
+  journal={Software Practice and Experience},
+  volume={30},
+  number={11},
+  pages={1203--1233},
+  year={2000}
 }
