Add presentation template

--- a/references/bibliothek.bib
+++ b/references/bibliothek.bib
@@ -21,3 +21,9 @@
   pages={1203--1233},
   year={2000}
 }
+
+@misc{tantau2010latex,
+  title={The LaTeX Beamer Class},
+  author={Tantau, Till and Wright, Joseph and Miletic, Vedran},
+  year={2010}
+}
