--- a/main.tex
+++ b/main.tex
@@ -3,10 +3,11 @@
 \usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm,includehead,includefoot,headsep=1cm]{geometry}
 \usepackage{iftex}
 \ifPDFTeX
-    \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
+    \usepackage[utf8x]{inputenc}
     \usepackage{lmodern}
     \usepackage[ngerman]{babel}
+    \usepackage{textgreek}
 \fi
 \ifLuaTeX
     \usepackage{fontspec}
@@ -30,6 +31,9 @@
 \usepackage{enumitem}
 \usepackage{color}
 \usepackage{microtype}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage[toc, nogroupskip, nonumberlist, nopostdot]{glossaries}
 \usepackage{array}
 \usepackage{caption}
